--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,26 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@keyframes backgroundAnimation {
+  0% {
+    background-position: 0% 0%;
+  }
+  50% {
+    background-position: 100% 0%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
+}
+
+.bg {
+  margin: 0;
+  padding: 0;
+  background-color: #212441;
+  background-image: linear-gradient(50deg, #212441, #D35831);
+  background-size: 200% 100%;
+  animation: backgroundAnimation 10s linear infinite;
+  font-family: Arial, sans-serif;
+  height: 100vh;
+}
