--- a/frontend/src/Styling/LandingScreen.css
+++ b/frontend/src/Styling/LandingScreen.css
@@ -54,3 +54,26 @@
   font-weight: lighter;
   padding: 15px;
 }
+
+@media screen and (max-width: 1024px) {
+  .center-rectangle {
+    width: 80%;
+    max-width: 400px; 
+    height: 550px;
+  }
+
+  .center-rectangle::before,
+  .center-rectangle::after {
+    display: none; 
+  }
+
+  .right-side {
+    width: 100%; 
+    text-align: center; 
+  }
+
+  .h-content {
+    font-size: 24px; 
+  }
+}
+
