--- a/frontend/src/Styling/LandingScreen.css
+++ b/frontend/src/Styling/LandingScreen.css
@@ -52,7 +52,7 @@
 .p-content {
   color: #212441;
   font-weight: lighter;
-  padding: 15px;
+  padding: 20px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -75,5 +75,10 @@
   .h-content {
     font-size: 24px; 
   }
+
+  .p-content {
+    padding: 0px 0px 5px 5px;
+  }
+
 }
 
