SignUp form button disable functionality added.

--- a/frontend/src/Styling/Form.css
+++ b/frontend/src/Styling/Form.css
@@ -96,6 +96,11 @@ button:hover {
   background-color: #c14621;
 }
 
+button[disabled] {
+  background-color: #ccc;
+  cursor: auto;
+}
+
 @media screen and (max-width: 768px) {
   .sign-in-form {
     padding: 20px;
