--- a/frontend/src/Styling/HomeContainer.css
+++ b/frontend/src/Styling/HomeContainer.css
@@ -7,6 +7,25 @@
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 30px 30px 0 0;
+    display: flex;
+    align-items: center;
+}
+  
+.center-content {
+    flex: 1;
+    padding: 20px;
+}
+  
+.active-users {
+    width: 15%;
+    height: 100%;
+    border-radius: 0 30px 0 0;
+    border-left: 2px solid #ccc;
+}
+
+.active-users h4 {
+    text-align: center;
+    color: #212441;
 }
 
 @media screen and (max-width: 1024px) {
@@ -15,5 +34,14 @@
       top: 54%;
       height: 690spx;
     }
+
+    .center-content {
+        flex: 1;
+    }
+    
+    .active-users {
+        display: none;
+    }
+
   
 }
