--- a/frontend/src/Styling/HomeContainer.css
+++ b/frontend/src/Styling/HomeContainer.css
@@ -26,6 +26,42 @@
     border-left: 2px solid #ccc;
 }
 
+.active-user {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    margin: 2px;
+    height: 35px;
+    color: rgb(200, 84, 42);
+}
+
+.active-user-pfp {
+    content: "";
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background-color: #707070;
+    margin-right: 0.5em;
+}
+
+.user-name {
+    margin-right: auto;
+    font-weight: bold; 
+}
+
+.active-user:nth-child(even) {
+    background-color: #e0e0e0;
+}
+
+.active-user-signal {
+    content: "";
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: rgb(107, 193, 21);
+    margin-right: 5px;
+}
+
 .active-users h4 {
     text-align: center;
     color: #212441;
