--- a/frontend/src/Styling/HomeContainer.css
+++ b/frontend/src/Styling/HomeContainer.css
@@ -24,6 +24,27 @@
     height: 100%;
     border-radius: 0 30px 0 0;
     border-left: 2px solid #ccc;
+    overflow-y: auto;
+}
+
+.active-users::-webkit-scrollbar {
+    width: 10px;
+    border-radius: 5px;
+}
+
+.active-users::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 5px;
+}
+
+.active-users::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+}
+
+.active-users::-webkit-scrollbar-thumb:hover {
+    background: #555;
+    border-radius: 5px;
 }
 
 .active-user {
